--- a/package.json
+++ b/package.json
@@ -18,9 +18,18 @@
   "homepage": "https://github.com/IVANn84/frontend-project-11#readme",
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.1",
+    "autoprefixer": "^10.4.14",
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
+    "postcss-loader": "^7.2.4",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.3"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.3"
   }
 }
