--- a/package.json
+++ b/package.json
@@ -17,19 +17,28 @@
   },
   "homepage": "https://github.com/IVANn84/frontend-project-11#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/preset-env": "^7.21.4",
     "@webpack-cli/generators": "^3.0.1",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.1",
     "postcss-loader": "^7.2.4",
-    "sass": "^1.62.0",
-    "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2"
   }
 }
