--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "on-change": "^4.0.2",
     "sass": "^1.62.0",
-    "sass-loader": "^13.2.2"
+    "sass-loader": "^13.2.2",
+    "yup": "^1.1.1"
   }
 }
