--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "the third progect",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --open",
+    "build": "webpack --mode=production --node-env=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
