--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "i18next": "^22.4.15",
     "on-change": "^4.0.2",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
