4 first adding parser

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "i18next": "^22.4.15",
+    "lodash": "^4.17.21",
     "on-change": "^4.0.2",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
