--- a/.github/workflows/Github Actions.yml
+++ b/.github/workflows/Github Actions.yml
@@ -1,5 +1,5 @@
 # Name of workflow
-name: Node CI
+name: Github Actions
 
 # Trigger the workflow on push or pull request
 on:
@@ -40,6 +40,3 @@ jobs:
 
       - name: Run linter
         run: make lint
-
-      # - name: Run tests
-      #   run: make test
