--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "rss-aggregator",
+  "type":"module",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
