--- a/.github/workflows/Github Actions.yml
+++ b/.github/workflows/Github Actions.yml
@@ -29,14 +29,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: npm install, build
-        # Install and build project
+      - name: npm install
+        # Install project
         run: |
           make install
-          make build
-        # Add environment variables
-        env:
-          CI: true
-
+        # Run linter
       - name: Run linter
         run: make lint
+        
